# utsushi

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  Dockerfile  Makefile.am  NEWS  README  bootstrap  configure.ac  install-deps
connexions/: usb.cpp
drivers/: combo.conf
drivers/esci/: Makefile.am  code-token.hpp  compound-tweaks.cpp  compound-tweaks.hpp  compound.cpp  compound.hpp  extended-scanner.cpp  grammar-capabilities.cpp  grammar-capabilities.ipp  grammar-information.hpp  grammar-information.ipp  grammar-parameters.ipp  grammar.ipp  scan-parameters.cpp  scanner-control.cpp  scanner.cpp  utsushi-esci.rules
drivers/esci/tests/: Makefile.am
filters/: doc-locate.cpp  get-text-orientation  reorient.cpp
filters/tests/: Makefile.am
gtkmm/: dialog.cpp
include/: boost-test.am
lib/: log.cpp  monitor.cpp
lib/tests/: Makefile.am  memory.cpp
po/: de.po  en.po  es.po  es_MX.po  fr.po  it.po  ja.po  ko.po  nl.po  pt.po  pt_BR.po  ru.po  zh_CN.po  zh_TW.po
sane/: utsushi.desc
sane/tests/: backend.cpp
src/: scan-cli.cpp
utsushi/: condition-variable.hpp  cstdint.hpp  exception.hpp  memory.hpp  mutex.hpp  regex.hpp  thread.hpp
utsushi/test/: environment.hpp
